# rulso

./: .gitignore  CLAUDE.md  LINEAR_SETUP.md  PROJECT_CONTEXT.md  README.md  STATUS.md  aesthetic.md  biome.json  roadmap.md  tech.md
.githooks/: commit-msg  pre-commit
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
design/: cards-inventory.md  cards.yaml  effects-inventory.md  goals-inventory.md  state.md  status-tokens.md
docs/: readme.md  workflow_lessons.md
engine/: README.md  pyproject.toml
engine/src/rulso/: __init__.py  cards.py  cli.py  cli_ws.py  effects.py  goals.py  grammar.py  labels.py  legality.py  persistence.py  protocol.py  rules.py  server.py  simulate.py  state.py  status.py
engine/src/rulso/bots/: human.py  ismcts.py  random.py
engine/tests/: test_cards_loader.py  test_cli_human_seat.py  test_cli_multiseed.py  test_cli_smoke.py  test_cli_ws.py  test_determinism.py  test_discard.py  test_effects_comparator.py  test_effects_dispatch.py  test_effects_marked_scope.py  test_effects_nouns.py  test_effects_op_modifiers.py  test_effects_scope.py  test_goals.py  test_ismcts.py  test_jokers.py  test_labels.py  test_m1_5_watchable.py  test_m2_watchable.py  test_persistence.py  test_protocol.py  test_random_bot.py  test_resolver.py  test_round_flow.py  test_server.py  test_shop.py  test_simulate.py  test_smoke.py  test_smoke_resolution_edges.py  test_smoke_state_transitions.py  test_state_models.py  test_status.py
scripts/: regenerate-types.sh
workflows/: feature-work.md  orchestrator.md  pr-merge.md
(+40 files in other folders)
